--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -22,7 +22,7 @@ main {
 
 /*---header--------------------*/
 .header {
-  background: #403C3B;
+  background: #403c3bf3;
   position: fixed;
   left: 0;
   right: 0;
@@ -36,19 +36,22 @@ main {
   grid-template-columns: minmax(100px, 170px) 1fr 150px;
   align-items: center;
   justify-content: space-between;
-  .logo {
-    font-weight: bold;
-    font-size: 25px;
-    line-height: 25px;
-    letter-spacing: 0.15em;
-    transition: all .2s ease;
-    color: red;
-    & span {
-      color: yellow;
-    }
-    &:hover {
-      transform: scale(101%);
-    }
+}
+.logo {
+  text-align: center;
+  font-weight: bold;
+  font-size: 25px;
+  line-height: 17px;
+  transition: all .2s ease;
+  letter-spacing: 2px;
+  color: red;
+  cursor: pointer;
+  & span {
+    font-size: 20px;
+    color: yellow;
+  }
+  &:hover {
+    transform: scale(101%);
   }
 }
 
@@ -191,7 +194,8 @@ main {
 /*---hero----------------------*/
 .hero {
   @include adaptive-value("height", 650, 300, 1);
-  margin-top: 70px;
+  // margin-top: 70px;
+  @include adaptive-value("margin-top", 90, 73, 1);
   width: 100%;
   position: relative;
   top: 0;
@@ -326,6 +330,10 @@ main {
   &:active {
     filter: drop-shadow(0px 20px 25px rgba(25, 29, 29, 0.7));
   }
+  & a img {
+    border-radius: 10px 10px 0 0;
+  }
+
 }
 
 .snacks__body {
@@ -550,6 +558,52 @@ main {
     background-color: #64605f;
   }
 }
+
+/*---footer--------------------*/
+
+.footer {
+}
+.footer_row {
+  height: 150px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: relative;
+}
+.copyright {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 80%;
+  padding: 0 25px;
+}
+.footer__scroll-up {
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  transform: translate(0, -50%);
+  text-align: center;
+  background-color: #fff;
+  border-radius: 50%;
+  @include adaptive-value("padding", 15, 10, 1);
+  box-sizing: content-box;
+  width: 24px;
+  height: 24px;
+  & img {
+    height: 100%;
+    width: 100%;
+  }
+}
+
+.address {
+  & span {
+    font-size: 18px;
+    font-weight: 600;
+  }
+
+}
+
 /*---Media---------------------*/
 @media (max-width: 1023px) {
   .call {
@@ -589,9 +643,6 @@ main {
       & span {
         margin-top: 15px;
       }
-    }
-    & .blocks__item:not(:last-child) {
-      // margin-right: 10px;
     }
   }
 
@@ -760,6 +811,18 @@ main {
   }
 }
 
+
+@media (max-width: 430px) { 
+  .footer-logo{
+    margin-right: 20px; 
+  }
+  .copyright {
+    justify-content: center;
+  }
+  .address {
+    margin-top: 20px;
+  }
+}
 
 @media (min-width: 767px) {
   .basket img {
