--- a/#source/css/nullstyle.css
+++ b/#source/css/nullstyle.css
@@ -1,137 +1,1 @@
-@charset "UTF-8";
-/*Обнуление*/
-* {
-  padding: 0;
-  margin: 0;
-  border: 0;
-}
-
-*, *:before, *:after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-:focus, :active {
-  outline: none;
-}
-
-a:focus, a:active {
-  outline: none;
-}
-
-nav, footer, header, aside {
-  display: block;
-}
-
-html, body {
-  height: 100%;
-  width: 100%;
-  font-size: 100%;
-  line-height: 1;
-  font-size: 16px;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
-
-input, button, textarea {
-  font-family: inherit;
-}
-
-input::-ms-clear {
-  display: none;
-}
-
-button {
-  cursor: pointer;
-}
-
-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-
-a, a:visited {
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-a {
-  color: #fff;
-}
-
-ul li {
-  list-style: none;
-}
-
-img {
-  vertical-align: top;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-size: inherit;
-  font-weight: inherit;
-}
-
-input[type=text]::-ms-clear {
-  display: none;
-  width: 0;
-  height: 0;
-}
-
-input[type=text]::-ms-reveal {
-  display: none;
-  width: 0;
-  height: 0;
-}
-
-input[type=search]::-webkit-search-decoration,
-input[type=search]::-webkit-search-cancel-button,
-input[type=search]::-webkit-search-results-button,
-input[type=search]::-webkit-search-results-decoration {
-  display: none;
-}
-
-/*--------------------*/
-@font-face {
-  font-family: "Gilroy";
-  src: url("../fonts/Gilroy-Bold.eot");
-  src: url("../fonts/Gilroy-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/Gilroy-Bold.woff2") format("woff2"), url("../fonts/Gilroy-Bold.woff") format("woff"), url("../fonts/Gilroy-Bold.svg#Gilroy-Bold") format("svg");
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Gilroy";
-  src: url("../fonts/Gilroy-Medium.eot");
-  src: url("../fonts/Gilroy-Medium.eot?#iefix") format("embedded-opentype"), url("../fonts/Gilroy-Medium.woff2") format("woff2"), url("../fonts/Gilroy-Medium.woff") format("woff"), url("../fonts/Gilroy-Medium.svg#Gilroy-Medium") format("svg");
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Gilroy";
-  src: url("../fonts/Gilroy-Light.eot");
-  src: url("../fonts/Gilroy-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/Gilroy-Light.woff2") format("woff2"), url("../fonts/Gilroy-Light.woff") format("woff"), url("../fonts/Gilroy-Light.svg#Gilroy-Light") format("svg");
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Gilroy";
-  src: url("../fonts/Gilroy-Regular.eot");
-  src: url("../fonts/Gilroy-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/Gilroy-Regular.woff2") format("woff2"), url("../fonts/Gilroy-Regular.woff") format("woff"), url("../fonts/Gilroy-Regular.svg#Gilroy-Regular") format("svg");
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Zing Rust Demo Base";
-  src: url("../fonts/ZingRustDemo-Base.woff2") format("woff2"), url("../fonts/ZingRustDemo-Base.woff") format("woff");
-  font-weight: normal;
-  font-style: italic;
-  font-display: swap;
-}
+@charset "UTF-8";*{padding:0;margin:0;border:0}*,:after,:before{-webkit-box-sizing:border-box;box-sizing:border-box}:active,:focus{outline:none}a:active,a:focus{outline:none}aside,footer,header,nav{display:block}body,html{height:100%;width:100%;font-size:100%;line-height:1;font-size:16px;-ms-text-size-adjust:100%;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%}button,input,textarea{font-family:inherit}input::-ms-clear{display:none}button{cursor:pointer}button::-moz-focus-inner{padding:0;border:0}a,a:visited{text-decoration:none}a:hover{text-decoration:none}a{color:#fff}ul li{list-style:none}img{vertical-align:top}h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit}input[type=text]::-ms-clear{display:none;width:0;height:0}input[type=text]::-ms-reveal{display:none;width:0;height:0}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration,input[type=search]::-webkit-search-results-button,input[type=search]::-webkit-search-results-decoration{display:none}@font-face{font-family:"Gilroy";src:url("../fonts/Gilroy-Bold.eot");src:url("../fonts/Gilroy-Bold.eot?#iefix") format("embedded-opentype"),url("../fonts/Gilroy-Bold.woff2") format("woff2"),url("../fonts/Gilroy-Bold.woff") format("woff"),url("../fonts/Gilroy-Bold.svg#Gilroy-Bold") format("svg");font-weight:bold;font-style:normal;font-display:swap}@font-face{font-family:"Gilroy";src:url("../fonts/Gilroy-Medium.eot");src:url("../fonts/Gilroy-Medium.eot?#iefix") format("embedded-opentype"),url("../fonts/Gilroy-Medium.woff2") format("woff2"),url("../fonts/Gilroy-Medium.woff") format("woff"),url("../fonts/Gilroy-Medium.svg#Gilroy-Medium") format("svg");font-weight:500;font-style:normal;font-display:swap}@font-face{font-family:"Gilroy";src:url("../fonts/Gilroy-Light.eot");src:url("../fonts/Gilroy-Light.eot?#iefix") format("embedded-opentype"),url("../fonts/Gilroy-Light.woff2") format("woff2"),url("../fonts/Gilroy-Light.woff") format("woff"),url("../fonts/Gilroy-Light.svg#Gilroy-Light") format("svg");font-weight:300;font-style:normal;font-display:swap}@font-face{font-family:"Gilroy";src:url("../fonts/Gilroy-Regular.eot");src:url("../fonts/Gilroy-Regular.eot?#iefix") format("embedded-opentype"),url("../fonts/Gilroy-Regular.woff2") format("woff2"),url("../fonts/Gilroy-Regular.woff") format("woff"),url("../fonts/Gilroy-Regular.svg#Gilroy-Regular") format("svg");font-weight:normal;font-style:normal;font-display:swap}@font-face{font-family:"Zing Rust Demo Base";src:url("../fonts/ZingRustDemo-Base.woff2") format("woff2"),url("../fonts/ZingRustDemo-Base.woff") format("woff");font-weight:normal;font-style:italic;font-display:swap}
