--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -624,7 +624,7 @@ main {
   top: -100%;
   height: 0;
   width: 100vw;
-  transition: all .8s ease-in-out;
+  transition: all .6s ease-in-out;
   z-index: 10;
   overflow-y: scroll;
 }
@@ -697,8 +697,8 @@ main {
   padding: 15px;
   min-height: 85px;
   display: grid;
-  grid-template-columns: minmax(150px, 120px) 2.5fr 1fr 1fr;
-  justify-items: center;
+  grid-template-columns: minmax(150px, 120px) 3fr .7fr .7fr;
+  justify-items: start;
   align-self: center;
   align-items: center;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
