--- a/css/style.css
+++ b/css/style.css
@@ -1010,9 +1010,9 @@ main {
   top: -100%;
   height: 0;
   width: 100vw;
-  -webkit-transition: all 0.8s ease-in-out;
-  -o-transition: all 0.8s ease-in-out;
-  transition: all 0.8s ease-in-out;
+  -webkit-transition: all 0.6s ease-in-out;
+  -o-transition: all 0.6s ease-in-out;
+  transition: all 0.6s ease-in-out;
   z-index: 10;
   overflow-y: scroll;
 }
@@ -1115,9 +1115,9 @@ main {
   min-height: 85px;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: minmax(150px, 120px) 2.5fr 1fr 1fr;
-  grid-template-columns: minmax(150px, 120px) 2.5fr 1fr 1fr;
-  justify-items: center;
+  -ms-grid-columns: minmax(150px, 120px) 3fr 0.7fr 0.7fr;
+  grid-template-columns: minmax(150px, 120px) 3fr 0.7fr 0.7fr;
+  justify-items: start;
   -ms-grid-row-align: center;
       align-self: center;
   -webkit-box-align: center;
