--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -345,6 +345,7 @@ main {
     filter: drop-shadow(0px 20px 25px rgba(25, 29, 29, 0.7));
   }
   & a img {
+    object-fit: contain;
     border-radius: 10px 10px 0 0;
   }
 }
@@ -706,13 +707,13 @@ main {
 
 }
 .product__img {
-  max-height: 100px;
-  @include adaptive-value("width", 135, 90, 1);
+  height: 85px;
+  @include adaptive-value("width", 120, 90, 1);
   & img {
+    object-fit: contain;
     border-radius: 10px;
     height: 100%;
     width: 100%;
-    object-fit: cover;
     & {
       fill: red;
     }
@@ -847,23 +848,29 @@ main {
     content: " ₽";
   }
 }
+.totalEnough {
+  display: inline-block;
+  line-height: 24px;
+  font-weight: 500;
+  font-size: 14px;
+}
 .total__need4free {
+  display: inline-block;
   font-weight: 500;
   font-size: 14px;
   line-height: 24px;
   color: #72A479;
-  &::before {
-    color: #fff;
-    content: "До бесплатной доставки не хватет: ";
-  }
-  &::after {
-    content: " ₽";
-  }
 }
 .total__min {
   font-weight: 400;
   font-size: 12px;
   line-height: 22px;
+  &::before{
+    content: "Минимальная сума заказа ";
+  }
+  &::after {
+    content: " ₽";
+  }
 }
 .total__checkout {
   height: 50px;
